Упрощение создания ActionCategory. 6 новых игровых значений (полная локализация)